tests/positive/ownership_early_return.safe
-- Test: ownership_early_return
-- Description: Early return cleans up inferred-reference owners from the active suite.
-- Expected: ACCEPT

package ownership_early_return

   type payload is record
      value : integer
      next : payload

   function read_and_exit returns integer
      outer : not null payload = (value = 7, next = null)
      inner : not null payload = (value = 9, next = null)
      return outer.value
