tests/negative/neg_pr117_explicit_all.safe
-- Test: neg_pr117_explicit_all
-- Description: Explicit `.all` is removed from the admitted Safe source surface.
-- Expected: REJECT removed_source_construct

package neg_pr117_explicit_all

   type payload is record
      value : integer;

   type payload_ptr is not null access payload;

   function demo (Source : payload_ptr) returns integer
      return Source.all.value;
